# TOKEN_MONITOR

./: .gitignore  Makefile  README.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  alert.py  polling.py  usage.py  vendor.py
backend/app/plugins/: __init__.py  anthropic.py  base.py  cursor.py  openai_plugin.py  registry.py  stubs.py  windsurf.py
backend/app/routers/: __init__.py  alerts.py  dashboard.py  plans.py  polling.py  usage.py  vendors.py
backend/app/scheduler/: engine.py  jobs.py
backend/app/schemas/: __init__.py  alert.py  dashboard.py  polling.py  usage.py  vendor.py
backend/app/services/: alert_service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/pages/: AlertsPage.tsx  DashboardPage.tsx  PlansPage.tsx  SettingsPage.tsx  UsagePage.tsx  VendorsPage.tsx
frontend/src/stores/: alertStore.ts
frontend/src/types/: index.ts
