[project]
name = "token-monitor"
version = "0.1.0"
description = "Personal dashboard to monitor AI coding tool subscriptions and token usage"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.0.0",
    "apscheduler>=3.10,<4.0",
    "httpx>=0.27.0",
    "python-dateutil>=2.9.0",
    "numpy>=1.26.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
